src/apps/infrastructure/longhorn/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    namespace: gateway
  hostnames:
  - "longhorn.internal"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: longhorn-frontend
      port: 80
      weight: 1
